
Version (SVN)
-------------

All:   Resolved issue CASTOR-1443 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed various compiler warnings mainly in tc7x and tc20x tests of CTF.
       Details: http://jira.codehaus.org/browse/CASTOR-1443
       (Ralf - 20060603)

All:   Resolved issue CASTOR-1398 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed 212 unused private methods, private fields, or local variables compiler warnings.
       Details: http://jira.codehaus.org/browse/CASTOR-1398
       (Ralf - 20060603)

All:   Resolved issue CASTOR-1441 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed 206 whitespace after and whitespace around compiler warnings.
       Details: http://jira.codehaus.org/browse/CASTOR-1441
       (Ralf - 20060603)

XML:   Resolved issue CASTOR-1440 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed Configuration.loadProperties(String,String) to close resource streams after usage.
       Details: http://jira.codehaus.org/browse/CASTOR-1440
       (Werner - 20060601)

XML:   Resolved issue CASTOR-1384 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with NPE related to field mappings without type declaration.
       Details: http://jira.codehaus.org/browse/CASTOR-1384
       (Werner - 20060530)
       
JDO:   Resolved issue CASTOR-1429 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed ClassNotFoundException related to using a custom XMLNaming scheme.
       Details: http://jira.codehaus.org/browse/CASTOR-1429
       (Werner - 200605023)

JDO:   Resolved issue CASTOR-1439 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added test case for Castor JDO CTF to test database.isPersistent().
       Details: http://jira.codehaus.org/browse/CASTOR-1439
       (Werner - 20060529)
