@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+All:   Fixed bug CASTOR-1444 using contribution from Martin Fuchs [martin-fuchs@gmx.net]
+       Fixed documentation of OQL OFFSET clause usage.
+       Details: http://jira.codehaus.org/browse/CASTOR-1444
+       (Martin - 2006006)
+
 All:   Resolved issue CASTOR-1443 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Fixed various compiler warnings mainly in tc7x and tc20x tests of CTF.
        Details: http://jira.codehaus.org/browse/CASTOR-1443
